--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
           command: |
             aws cloudformation deploy \
             --template-file bucket.yml \
-            --stack-name "${CIRCLE_WORKFLOW_ID}" \
-            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID}"
+            --stack-name "${CIRCLE_WORKFLOW_ID:0:7}" \
+            --parameter-overrides NAME="${CIRCLE_WORKFLOW_ID:0:7}"
 
   get_last_deployment_id:
     docker:
@@ -40,7 +40,7 @@ jobs:
             aws cloudformation deploy \
             --template-file cloudfront.yml \
             --stack-name production-distro \
-            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID}"
+            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID:0:7}"
 
   clean_up_old_front_end:
     docker:
@@ -53,7 +53,7 @@ jobs:
           name: "Clean up old front end"
           command: |
             PreviousPipelineID=`cat deploymentID.txt` 
-            aws s3 rm "s3://${OldPipelineID}" --recursive
+            aws s3 rm "s3://${PreviousPipelineID}" --recursive
             aws cloudformation delete-stack --stack-name "${PreviousPipelineID}"
 workflows:
   myWorkflow:
