--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ jobs:
             aws cloudformation deploy \
             --template-file bucket.yml \
             --stack-name "${CIRCLE_WORKFLOW_ID:0:7}" \
-            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID:0:7}"
+            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            --region us-west-2
 
   get_last_deployment_id:
     docker:
