--- a/bucket.yml
+++ b/bucket.yml
@@ -1,11 +1,11 @@
 Parameters:
-  NAME:
+  PipelineID:
     Type: String
 Resources:
   WebsiteBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub "${NAME}"
+      BucketName: !Sub "${PipelineID}"
       AccessControl: PublicRead
       WebsiteConfiguration:
         IndexDocument: index.html
