Initial commit premote to production

--- a/bucket.yml
+++ b/bucket.yml
@@ -1,11 +1,11 @@
 Parameters:
-  PipelineID:
+  NAME:
     Type: String
 Resources:
   WebsiteBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub "${PipelineID}"
+      BucketName: !Sub "${NAME}"
       AccessControl: PublicRead
       WebsiteConfiguration:
         IndexDocument: index.html
