--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
             aws cloudformation deploy \
             --template-file bucket.yml \
             --stack-name "${CIRCLE_WORKFLOW_ID:0:7}" \
-            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID}" \
 
   get_last_deployment_id:
     docker:
@@ -40,7 +40,7 @@ jobs:
             aws cloudformation deploy \
             --template-file cloudfront.yml \
             --stack-name production-distro \
-            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID:0:7}"
+            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID}"
 
   clean_up_old_front_end:
     docker:
