--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: |
             aws cloudformation \
             list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
-            --no-paginate --output text >> ./.circleci/DeploymentIDFiles/deploymentID.txt
+            --no-paginate --output text > ./.circleci/DeploymentIDFiles/deploymentID.txt
             cat ./.circleci/DeploymentIDFiles/deploymentID.txt
       - persist_to_workspace:
           root: ./.circleci/DeploymentIDFiles/
@@ -74,10 +74,10 @@ jobs:
       - run:
           name: "Clean up old front end"
           command: |
-            PreviousPipelineID=`cat ./.circleci/DeploymentIDFiles/deploymentID.txt`
-            echo $PreviousPipelineID
-            aws s3 rm "s3://${PreviousPipelineID}" --recursive
-            aws cloudformation delete-stack --stack-name $PreviousPipelineID
+            PreviousPipelineID=$(cat ./.circleci/DeploymentIDFiles/deploymentID.txt)
+            echo "$PreviousPipelineID"
+            aws s3 rm "s3://$PreviousPipelineID" --recursive
+            aws cloudformation delete-stack --stack-name "$PreviousPipelineID"
 workflows:
   myWorkflow:
     jobs:
