--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
       - run:
           name: "Clean up old front end"
           command: |
-            PreviousPipelineID=$(cat ./.circleci/DeploymentIDFiles/deploymentID.txt)
+            PreviousPipelineID=`cat ./.circleci/DeploymentIDFiles/deploymentID.txt`
             echo "$PreviousPipelineID"
             aws s3 rm "s3://$PreviousPipelineID" --recursive
             aws cloudformation delete-stack --stack-name "$PreviousPipelineID"
